[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qbstreamlit"
version = "0.1.0"
authors = [
  { name="Ryan Rosenberg", email="ryanr345@gmail.com" },
]
description = "Functions for Streamlit apps displaying detailed quizbowl stats"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/ryanrosenberg/qbstreamlit"
"Bug Tracker" = "https://github.com/ryanrosenberg/qbstreamlit/issues"